--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -13,6 +13,30 @@ architectures:
   - build-on: amd64
 
 parts:
+  desktop-qt5:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: qt
+    plugin: make
+    make-parameters: ["FLAVOR=qt5"]
+    build-packages:
+      - build-essential
+      - qtbase5-dev
+      - dpkg-dev
+    stage-packages:
+      - libxkbcommon0
+      - ttf-ubuntu-font-family
+      - dmz-cursor-theme
+      - light-themes
+      - adwaita-icon-theme
+      - gnome-themes-standard
+      - shared-mime-info
+      - libqt5gui5
+      - libgdk-pixbuf2.0-0
+      - libqt5svg5 # for loading icon themes which are svg
+      - try: [appmenu-qt5] # not available on core18
+      - locales-all
+      - xdg-user-dirs
+      - fcitx-frontend-qt5
   python-deps:
     plugin: python
     python-version: python2
@@ -27,7 +51,7 @@ parts:
       - desktop-qt5
     plugin: dump
     source-type: deb
-    source: tribler_7.2.0-exp1-317_all.deb
+    source: https://jenkins-ci.tribler.org/job/Build-Tribler_release/job/Build/lastSuccessfulBuild/artifact/tribler_7.2.0-exp1-317-g4f032de52_all.deb
     override-build: |
       DEB_API="https://jenkins-ci.tribler.org/job/Build-Tribler_release/job/Build/lastSuccessfulBuild/artifact/tribler_7.2.0-exp1-317-g4f032de52_all.deb"
       VERSION=$(echo $DEB_API| rev | cut -d/ -f1|rev|cut -d_ -f2|cut -d'-' -f 1,2)
